# omninomicon

./: Dockerfile  README.md  docker-compose.yml  main.py  mcp_server.py  pyproject.toml
migrations/: env.py
migrations/versions/: 71a1997582ed_create_notes_table.py
omninomicon/: main.py
omninomicon/models/: notes.py
omninomicon/routers/: __init__.py  notes.py
vector-api/: main.py
